--- a/multicontainerproject.yaml
+++ b/multicontainerproject.yaml
@@ -8,5 +8,19 @@ spec:
     image: nginx
     ports:
     - containerPort: 80
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "128Mi"
+        cpu: "500m"
   - name: ubuntu
     image: ubuntu
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "128Mi"
+        cpu: "500m"
